--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     provided "org.embulk:embulk-core:0.8.9"
     // compile "YOUR_JAR_DEPENDENCY_GROUP:YOUR_JAR_DEPENDENCY_MODULE:YOUR_JAR_DEPENDENCY_VERSION"
     testCompile "junit:junit:4.+"
+
+    testCompile  "org.embulk:embulk-core:0.8.9:tests"
+    testCompile  "org.embulk:embulk-standards:0.8.9"
 }
 
 task classpath(type: Copy, dependsOn: ["jar"]) {
